@@ -5439,3 +5439,5 @@ Start... early ages
 - aes/geminit.c aes/gemlib.h: Move desktop directory to THEGLO. (RFB)
 - aes/geminit.c aes/gemlib.h: Move program name to THEGLO. (RFB)
 - aes/geminit.c aes/gemlib.h: Move sh_find() work area to THEGLO. (RFB)
+- aes/gemlib.h cli/cmd.h desk/deskdir.c desk/deskfun.c desk/deskinf.c
+  desk/deskpro.c include/config.h: Add new #define for MAXPATHLEN. (RFB)
